Fix: fixed having to scroll on smaller devices
made prize section and life line section hidden and added buttons to show and hide them on smaller devices so the anwser and question also the timer fit on the screen without scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ input {
     margin-bottom: 30px;
 }
 
-#life_lines button{
+#life-lines button{
     background-color: transparent;
     width: 60px;
     height: 50px;
@@ -301,6 +301,13 @@ input {
     border: 1px solid white;
     border-radius: 50%;
     box-shadow: 0px 0px 3px 4px var(--dark-blue);
+}
+
+.menu-mute {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
 }
 
 /*timer*/
@@ -458,7 +465,6 @@ ul {
 /*footer:- bottom of page*/
 footer {
     background-color: black;
-    
     position: fixed;
     bottom: 0;
     left: 0;
@@ -474,9 +480,14 @@ footer {
     text-align: center;
   }
 
-  footer p ,footer a{
+footer p ,footer a{
     margin: 15px;
   }
+
+/* for lifelines and prizes section to show and hide them on smaller screen */
+.prizes-show-hide, .life-line-show-hide {
+    display: none;
+}
 
 @media screen and (max-width: 900px) {
     main {
@@ -558,4 +569,64 @@ footer {
     #pop_up {
         width: 95%;
     }
+}
+
+@media screen and (max-height: 800px) {
+
+.timer-logo {
+    flex-direction: column;
+    width: 70%;
+    height: 210px;
+    margin: 0;
+}
+.menu-mute {
+    position: absolute;
+    flex-direction: row;
+    width: 100%;
+}
+
+#life-lines, #prizes {
+    display: none;
+    position: absolute;
+    height: 400px;
+    width: 200px;
+    background-color: var(--dark-blue);
+    margin: auto auto;
+    flex-direction: column;
+    z-index: 2;
+}
+
+.lf-buttons {
+    flex-direction: row;
+    align-items: center;
+}
+
+#prizes {
+right: 40px;
+}
+
+#life-lines {
+left: 40px;
+}
+
+.prizes-show-hide, .life-line-show-hide {
+    position: absolute;
+    display: flex;
+    background-color: transparent;
+    border: 1px solid var(--border);
+    
+    padding: 5px;
+}
+.prizes-show-hide {
+    right:-20px;
+    bottom: 30px;
+    rotate: 270deg;
+}
+.life-line-show-hide {
+    left: -40px;
+    rotate: 90deg;
+    bottom: 50px;
+    
+}
+
 }
